# tesla-coil

./: .gitignore
code/: Cargo.toml
code/.cargo/: config.toml
code/src/: main.rs
code/stack/src/: lib.rs
model/: common.scad  plug.scad  primary_coil_form.scad  primary_coil_form_a.scad  primary_coil_form_b.scad  primary_coil_form_posts.scad
pcb/: audio_adapter.kicad_pro  audio_adapter.kicad_sch  bom.ini  driver.kicad_pcb  driver.kicad_pro  driver.kicad_sch  driver_old.kicad_pcb  kibot.yaml  local.kicad_sym  synth.kicad_pcb  synth.kicad_pro  synth.kicad_sch  vdoubler.kicad_pcb  vdoubler.kicad_pro  vdoubler.kicad_sch
pcb/local.3dshapes/: 1546833-2.step  1546833-3.step  1546833-4.step
pcb/local.pretty/: 282834-2.kicad_mod  282834-3.kicad_mod  282834-4.kicad_mod  CUI_PJ-037A.kicad_mod  CUI_SDS-50J.kicad_mod  GDT.kicad_mod  TE_1546833-2.kicad_mod  TE_1546833-3.kicad_mod  TE_1546833-4.kicad_mod  TO-3P-3_Vertical_Heatsink.kicad_mod
